[tool.poetry]
name = "fastapi-sample"
version = "0.1.0"
description = ""
authors = ["Atsuki Matsuo <matsuo.de@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
fastapi = "^0.55.1"
uvicorn = "^0.11.5"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
